// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> matches snapshot 1`] = `
<div>
  <textarea
    cols={30}
    disabled={false}
    id="135f0a7a-f53c-48fe-9db1-2ce6e8500b48"
    maxLength={900}
    name="fugiat error molestiae laborum est possimus assumenda"
    onChange={[MockFunction]}
    placeholder="enim iure facilis ut explicabo iure vitae"
    readOnly={true}
    required={false}
    rows={10}
    style={
      Object {
        "marginBottom": "0px",
      }
    }
  />
  <p>
    vel ipsa tempora aut sint aperiam occaecati
  </p>
</div>
`;

exports[`<TextArea /> matches snapshot 2`] = `
<div>
  <textarea
    cols={30}
    disabled={false}
    id="illum animi vel provident dicta perferendis dolorum"
    onChange={[MockFunction]}
    placeholder="omnis laborum exercitationem est sapiente laudantium molestias"
    readOnly={true}
    required={false}
    rows={10}
    style={
      Object {
        "marginBottom": "0px",
      }
    }
    value="sapiente soluta corporis commodi eaque nisi cum"
  />
  <p>
    ea ducimus autem sit aspernatur aspernatur quam
  </p>
</div>
`;

exports[`<TextArea /> matches snapshot 3`] = `
<div
  className="at sint dolores fugiat quis et voluptas"
>
  <textarea
    cols={30}
    disabled={false}
    id="eligendi est fugiat dolorem nihil quam nulla"
    onChange={[MockFunction]}
    readOnly={false}
    required={false}
    rows={10}
    style={
      Object {
        "marginBottom": "0px",
      }
    }
    value={[Function]}
  />
  <p>
    quae iusto sapiente nostrum aut corrupti sed
  </p>
</div>
`;

exports[`<TextArea /> matches snapshot 4`] = `
<div
  className="tempora at modi occaecati illum laborum quos"
>
  <textarea
    cols={30}
    disabled={false}
    id="consectetur soluta inventore laudantium dolor sint officiis"
    maxLength={2955}
    name="dignissimos dolore qui voluptatem cumque nihil iste"
    onChange={[MockFunction]}
    placeholder="unde rem similique et maxime quia dolores"
    readOnly={false}
    required={false}
    rows={10}
    style={
      Object {
        "marginBottom": "0px",
      }
    }
  />
  <p>
    itaque et in fugit in rerum libero
  </p>
</div>
`;

exports[`<TextArea /> matches snapshot 5`] = `
<div
  className="et optio consequatur velit voluptate necessitatibus excepturi"
>
  <textarea
    cols={30}
    disabled={true}
    id="odit aut labore qui aut inventore aut"
    name="beatae incidunt ut ducimus fugiat et et"
    onChange={[MockFunction]}
    placeholder="quidem voluptatibus libero aut autem ut ullam"
    readOnly={true}
    required={false}
    rows={10}
    style={
      Object {
        "marginBottom": "0px",
      }
    }
    value="minus quo sunt possimus earum animi quis"
  />
  <p>
    quos rerum nobis nam dolor quas repellendus
  </p>
</div>
`;

exports[`<TextArea /> matches snapshot 6`] = `
<div>
  <textarea
    cols={30}
    disabled={false}
    id="90acd560-af18-43af-a701-9b580816d12e"
    onChange={[MockFunction]}
    placeholder="molestiae non sint et ipsa consequuntur quidem"
    readOnly={false}
    required={false}
    rows={10}
    style={
      Object {
        "marginBottom": "0px",
      }
    }
    value="molestiae occaecati a culpa facilis eligendi voluptatibus"
  />
  <p>
    aut sint cumque sunt mollitia quibusdam officia
  </p>
</div>
`;

exports[`<TextArea /> matches snapshot 7`] = `
<div>
  <textarea
    cols={30}
    disabled={false}
    id="eum repudiandae minima temporibus ducimus quia assumenda"
    name="neque saepe est labore sed rerum nesciunt"
    onChange={[MockFunction]}
    readOnly={true}
    required={false}
    rows={10}
    style={
      Object {
        "marginBottom": "0px",
      }
    }
    value="architecto accusantium vel enim sint voluptatem porro"
  />
  <p>
    vitae consequuntur non sit et ut voluptatem
  </p>
</div>
`;

exports[`<TextArea /> matches snapshot 8`] = `
<div
  className="culpa suscipit totam libero necessitatibus quis ratione"
>
  <textarea
    cols={30}
    disabled={false}
    id="1b33398f-3d7f-4aa9-aa53-f8ee5973ab54"
    onChange={[MockFunction]}
    placeholder="molestiae et dicta odit vel quisquam qui"
    readOnly={false}
    required={false}
    rows={10}
    style={
      Object {
        "marginBottom": "0px",
      }
    }
  />
  <p>
    rem qui hic dolore quibusdam quasi quisquam
  </p>
</div>
`;
